<resources>
    <string name="app_name">ErrorCalculatorAndroid</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnDecimal">0</string>
    <string name="btnPlusMinus">±</string>
    <string name="btnAdd">+</string>
    <string name="btnSubtract">-</string>
    <string name="btnMultiply">*</string>
    <string name="btnDivide">/</string>
    <string name="btnPower">^</string>
    <string name="btnSINE">sin</string>
    <string name="btnCOSINE">cos</string>
    <string name="btnTANGENT">tan</string>
    <string name="btnLOG10">log</string>
    <string name="btnANS">ANS</string>
    <string name="btnClear">C</string>
    <string name="btnEquals">=</string>
    <string name="btnBackspace">←</string>
    <string name="switchRadOn">Rad</string>
    <string name="switchRadOff">Deg</string>
</resources>
