<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <Switch
                android:id="@+id/switchRad"
                android:layout_height="wrap_content"
                android:textOff="@string/switchRadOff"
                android:textOn="@string/switchRadOn"/>

            <Button
                android:id="@+id/btnLOG10"
                android:layout_height="wrap_content"
                android:text="@string/btnLOG10"/>

            <Button
                android:id="@+id/btnPower"
                android:layout_height="wrap_content"
                android:text="@string/btnPower"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnSINE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnSINE"/>

            <Button
                android:id="@+id/btnCOSINE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnCOSINE"/>

            <Button
                android:id="@+id/btnTANGENT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnTANGENT"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnANS"
                android:layout_height="wrap_content"
                android:text="@string/btnANS"/>

            <Button
                android:id="@+id/btnClear"
                android:layout_height="wrap_content"
                android:text="@string/btnClear"/>

            <Button
                android:id="@+id/btnBackspace"
                android:layout_height="wrap_content"
                android:text="@string/btnBackspace"/>

            <Button
                android:id="@+id/btnDivide"
                android:layout_height="wrap_content"
                android:text="@string/btnDivide"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn1"
                android:layout_height="wrap_content"
                android:text="@string/btn1"/>

            <Button
                android:id="@+id/btn2"
                android:layout_height="wrap_content"
                android:text="@string/btn2"/>

            <Button
                android:id="@+id/btn3"
                android:layout_height="wrap_content"
                android:text="@string/btn3" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_height="wrap_content"
                android:text="@string/btnMultiply"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn4"
                android:layout_height="wrap_content"
                android:text="@string/btn4"/>

            <Button
                android:id="@+id/btn5"
                android:layout_height="wrap_content"
                android:text="@string/btn5"/>

            <Button
                android:id="@+id/btn6"
                android:layout_height="wrap_content"
                android:text="@string/btn6" />

            <Button
                android:id="@+id/btnSubtract"
                android:layout_height="wrap_content"
                android:text="@string/btnDecimal"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn7"
                android:layout_height="wrap_content"
                android:text="@string/btn7"/>

            <Button
                android:id="@+id/btn8"
                android:layout_height="wrap_content"
                android:text="@string/btn8"/>

            <Button
                android:id="@+id/btn9"
                android:layout_height="wrap_content"
                android:text="@string/btn9" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_height="wrap_content"
                android:text="@string/btnAdd"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnPlusMinus"
                android:layout_height="wrap_content"
                android:text="@string/btnPlusMinus" />

            <Button
                android:id="@+id/btn0"
                android:layout_height="wrap_content"
                android:text="@string/btn0"/>

            <Button
                android:id="@+id/btnDecimal"
                android:layout_height="wrap_content"
                android:text="@string/btnDecimal"/>

            <Button
                android:id="@+id/btnEquals"
                android:layout_height="wrap_content"
                android:text="@string/btnEquals"/>

        </TableRow>

    </TableLayout>

</RelativeLayout>